--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Licorice&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Licorice&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -42,7 +42,14 @@
           </div>
       </div>
       <div class="main1">
-          <h1 class="heading1">Start quiz</h1>
+          <div class="para">
+          <div class="center1">
+          <h2 class="heading1">Awesome Quiz Application</h2>
+          <div class="time">
+              <span>Time Left</span><span class="span2">15</span>
+          </div>
+        </div>
+    </div>
       </div>
 
     <script src="custom.js"></script>
