--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
           <div class="time">
               <span>Time Left</span><span class="span2">15</span>
           </div>
+          
         </div>
+        <hr class="w1" />
+        <div class="quiz">
+           <h2 class="b1">1.What does HTML stands for ?</h2>
+           <div class="a1"><p>Hypertext Preprocessor</p> </div>
+           <div class="a1"><p>Hypertext style sheet</p></div>
+           <div class="a1"><p>Hypertext markup language</p></div>
+           <div class="a1"><p>Hypertext trasnfer protocol</p></div>
+        </div>
+        <hr class="w2" />
+        <p>1 of 5 Questions</p>
     </div>
       </div>
 
