--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <hr class="w2" />
         <p>1 of 5 Questions</p>
     </div>
+   
+      </div>
+      <div class="main2">
+        <button class="btn3">Start Quiz</button>
       </div>
 
     <script src="custom.js"></script>
