--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
         <hr class="w1" />
         <div class="quiz">
            <h2 class="b1">1.What does HTML stands for ?</h2>
-           <div class="a1"><p>Hypertext Preprocessor</p> </div>
-           <div class="a1"><p>Hypertext style sheet</p></div>
-           <div class="a1"><p>Hypertext markup language</p></div>
-           <div class="a1"><p>Hypertext trasnfer protocol</p></div>
+           <div id="op1" class="a1"><p>Hypertext Preprocessor</p> </div>
+           <div id="op2" class="a1"><p>Hypertext style sheet</p></div>
+           <div id="op3" class="a1"><p>Hypertext markup language</p></div>
+           <div id="op4" class="a1"><p>Hypertext trasnfer protocol</p></div>
         </div>
         <hr class="w2" />
-        <p>1 of 5 Questions</p>
+        <p ><span class="next"> 1 </span>of 5 Questions</p>
+        <button id="btn4">next question</button>
     </div>
    
       </div>
